{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 26,
  "lineage": "444ffa4d-bf16-865c-4995-d54a74a006a1",
  "resources": [
    {
      "module": "module.instance_two",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "module.instance_two.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-07T06:38:16.674-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mihai-test-341609/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/global/networks/default",
            "priority": 1000,
            "project": "mihai-test-341609",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/global/firewalls/allow-http",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "mynetwork"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instance_two",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "module.instance_two.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-07T06:38:16.673-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mihai-test-341609/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/global/networks/default",
            "priority": 1000,
            "project": "mihai-test-341609",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/global/firewalls/allow-https",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "mynetwork"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "allow-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instance_two",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_one",
      "provider": "module.instance_two.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-07T06:38:16.679-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mihai-test-341609/global/firewalls/allow-one",
            "log_config": [],
            "name": "allow-one",
            "network": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/global/networks/default",
            "priority": 1000,
            "project": "mihai-test-341609",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/global/firewalls/allow-one",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "mynetwork"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "allow-one"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instance_two",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_two",
      "provider": "module.instance_two.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "999"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-07T06:38:16.678-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mihai-test-341609/global/firewalls/allow-two",
            "log_config": [],
            "name": "allow-two",
            "network": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/global/networks/default",
            "priority": 1000,
            "project": "mihai-test-341609",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/global/firewalls/allow-two",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "mynetwork"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "allow-two"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}